app/styles/layout.less
.Wrap {
  height: 100vh;
  display: flex;
  position: relative;
  flex-flow: column;
  overflow: hidden;
}
.Top {

}
.Content {
  position: relative;
  transition: all 0.3s ease-out;
  @media only screen and (min-width: 768px) {
    flex: 1;
    display: flex;
  }
}
.Main {
  flex: 1;
}
.Footer {
  height: @footerHeight;
}

